--- a/playbooks/os_auth.yml
+++ b/playbooks/os_auth.yml
@@ -17,6 +17,7 @@
           auth_url: 'https://192.168.42.132:5000/v2.0'
           username: 'admin'
           password: bdee3d85b0264ad4
+        validate_certs: no
 
     - name: Show service catalog
       debug:
