--- a/playbooks/os_auth.yml
+++ b/playbooks/os_auth.yml
@@ -14,7 +14,7 @@
       os_auth:
         # cloud: whatever
         auth:
-          auth_url: 'https://192.168.42.132:5000/v2.0'
+          auth_url: 'http://192.168.42.132:5000/v2.0'
           username: 'admin'
           password: bdee3d85b0264ad4
         validate_certs: no
