--- a/playbooks/os_project.yml
+++ b/playbooks/os_project.yml
@@ -21,7 +21,7 @@
 
     # Create a project
     - os_project:
-        cloud: mycloud
+        # cloud: mycloud
         state: present
         name: demoproject
         description: demodescription
