--- a/playbooks/os_project.yml
+++ b/playbooks/os_project.yml
@@ -10,9 +10,9 @@
     # - debug: var=manageiq.api_token
     # - debug: var=manageiq.service
 
-    # - name: Authenticate to the cloud and retrieve the service catalog
-    #   os_auth:
-    #     # cloud: whatever
+    - name: Authenticate to the cloud and retrieve the service catalog
+      os_auth:
+        cloud: mycloud
     #     auth:
     #       auth_url: 'http://192.168.42.132:5000/v2.0'
     #       username: 'admin'
