--- a/playbooks/os_project.yml
+++ b/playbooks/os_project.yml
@@ -4,6 +4,9 @@
   connection: local
   # vars_files:
   #   - "../group_vars/all/vars"
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/ansible/openstack.yaml
+    
   tasks:
     # - debug: var=manageiq
     # - debug: var=manageiq.api_url
@@ -11,13 +14,15 @@
     # - debug: var=manageiq.service
 
     - name: Authenticate to the cloud and retrieve the service catalog
+    # https://docs.ansible.com/ansible/os_auth_module.html
       os_auth:
         cloud: mycloud
-    #     auth:
-    #       auth_url: 'http://192.168.42.132:5000/v2.0'
-    #       username: 'admin'
-    #       password: bdee3d85b0264ad4
-    #     validate_certs: no
+        # auth:
+        #   auth_url: http://192.168.42.132:5000/v2.0
+        #   username: admin
+        #   password: bdee3d85b0264ad4
+        #   # project_name: admin
+        # validate_certs: no
 
     # Create a project
     - os_project:
