--- a/scratch/openstack.yaml
+++ b/scratch/openstack.yaml
@@ -2,8 +2,8 @@ clouds:
   mycloud:
     region_name: RegionOne
     auth:
-      username: 'admin'
+      username: admin
       password: bdee3d85b0264ad4
-      project_name: 'admin'
-      auth_url: 'http://192.168.42.132:5000/v2.0'
+      project_name: admin
+      auth_url: http://192.168.42.132:5000/v2.0
     validate_certs: no
