--- a/playbooks/os_project.yml
+++ b/playbooks/os_project.yml
@@ -6,7 +6,7 @@
   #   - "../group_vars/all/vars"
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/ansible/openstack.yaml
-    
+
   tasks:
     # - debug: var=manageiq
     # - debug: var=manageiq.api_url
@@ -24,13 +24,26 @@
         #   # project_name: admin
         # validate_certs: no
 
+    # Gather facts about previously created projects
+    # - os_project_facts:
+    #     cloud: mycloud
+    # - debug:
+    #     var: openstack_projects
+
+    # # Gather facts about a previously created project by name
+    # - os_project_facts:
+    #     cloud: mycloud
+    #     name: admin
+    # - debug:
+    #     var: openstack_projects
+
     # Create a project
     - os_project:
         cloud: mycloud
         state: present
         name: demoproject
         description: demodescription
-        # domain_id: demoid
+        domain_id: default
         enabled: True
 
     # Delete a project
