--- a/playbooks/os_network.yml
+++ b/playbooks/os_network.yml
@@ -5,10 +5,7 @@
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/ansible/openstack.yaml
   vars:
-    # network_name: boom
-    # os_host: 192.168.42.133
-    # os_password: d6ef8d5e38314435
-    # os_ssl: false
+    os_ssl: "{{ os_ssl }}"
     
   tasks:
     - debug: var=playbook_dir
