--- a/playbooks/os_project.yml
+++ b/playbooks/os_project.yml
@@ -2,40 +2,44 @@
 - name: Do something on OpenStack with Ansible-Inside
   hosts: localhost
   connection: local
-  # vars_files:
-  #   - "../group_vars/all/vars"
   environment:
-    OS_CLIENT_CONFIG_FILE: /etc/ansible/openstack.yaml
+    OS_CLIENT_CONFIG_FILE: /tmp/openstack.yaml
+
+  vars:
+    os_ssl: "{{ os_ssl | default('false') }}"
 
   tasks:
-    # - debug: var=manageiq
-    # - debug: var=manageiq.api_url
-    # - debug: var=manageiq.api_token
-    # - debug: var=manageiq.service
+    - debug: var=os_ssl
 
-    - name: Authenticate to the cloud and retrieve the service catalog
+    - name: Create OS_CLIENT_CONFIG_FILE for Non-SSL
+      template:
+        src: "{{ playbook_dir }}/../templates/openstack.yaml.j2"
+        dest: /tmp/openstack.yaml
+      when: os_ssl == "false"
+
+    - name: Create OS_CLIENT_CONFIG_FILE for SSL
+      template:
+        src: "{{ playbook_dir }}/../templates/openstack.yaml.ssl.j2"
+        dest: /tmp/openstack.yaml
+      when: os_ssl == "true"
+
     # https://docs.ansible.com/ansible/os_auth_module.html
+    - name: Authenticate to specified OpenStack provider
       os_auth:
         cloud: mycloud
-        # auth:
-        #   auth_url: http://192.168.42.132:5000/v2.0
-        #   username: admin
-        #   password: bdee3d85b0264ad4
-        #   # project_name: admin
-        # validate_certs: no
 
     # Gather facts about previously created projects
-    # - os_project_facts:
-    #     cloud: mycloud
-    # - debug:
-    #     var: openstack_projects
+    - os_project_facts:
+        cloud: mycloud
+    - debug:
+        var: openstack_projects
 
-    # # Gather facts about a previously created project by name
-    # - os_project_facts:
-    #     cloud: mycloud
-    #     name: admin
-    # - debug:
-    #     var: openstack_projects
+    # Gather facts about a previously created project by name
+    - os_project_facts:
+        cloud: mycloud
+        name: admin
+    - debug:
+        var: openstack_projects
 
     # Create a project
     - os_project:
