--- a/dialogues/dialog_OpenStack |Create External Network.yml
+++ b/dialogues/dialog_OpenStack |Create External Network.yml
@@ -151,7 +151,7 @@
         required: true
         required_method: 
         required_method_options: {}
-        default_value: 192.168.42.133
+        default_value: 
         values: 
         values_method: 
         values_method_options: {}
@@ -189,7 +189,7 @@
         required: true
         required_method: 
         required_method_options: {}
-        default_value: d6ef8d5e38314435
+        default_value: 
         values: 
         values_method: 
         values_method_options: {}
