--- a/dialogues/dialog_OpenStack |Create External Network.yml
+++ b/dialogues/dialog_OpenStack |Create External Network.yml
@@ -13,94 +13,10 @@
     dialog_groups:
     - description: 
       display: edit
-      label: Options
-      display_method: 
-      display_method_options: 
-      position: 0
-      dialog_fields:
-      - name: credential
-        description: The credential to run the playbook
-        data_type: string
-        notes: 
-        notes_display: 
-        display: edit
-        display_method: 
-        display_method_options: {}
-        required: false
-        required_method: 
-        required_method_options: {}
-        default_value: '6'
-        values: 
-        values_method: 
-        values_method_options: {}
-        options:
-          :protected: false
-        label: Machine Credential
-        position: 0
-        validator_type: 
-        validator_rule: 
-        reconfigurable: true
-        dynamic: false
-        show_refresh_button: 
-        load_values_on_init: 
-        read_only: true
-        auto_refresh: 
-        trigger_auto_refresh: 
-        visible: false
-        type: DialogFieldTextBox
-        resource_action:
-          action: 
-          resource_type: DialogField
-          ae_namespace: 
-          ae_class: 
-          ae_instance: 
-          ae_message: 
-          ae_attributes: {}
-      - name: hosts
-        description: A ','-separated string to list hosts for the playbook to run
-          at
-        data_type: string
-        notes: 
-        notes_display: 
-        display: edit
-        display_method: 
-        display_method_options: {}
-        required: false
-        required_method: 
-        required_method_options: {}
-        default_value: localhost
-        values: 
-        values_method: 
-        values_method_options: {}
-        options:
-          :protected: false
-        label: Hosts
-        position: 1
-        validator_type: 
-        validator_rule: 
-        reconfigurable: true
-        dynamic: 
-        show_refresh_button: 
-        load_values_on_init: 
-        read_only: true
-        auto_refresh: 
-        trigger_auto_refresh: 
-        visible: true
-        type: DialogFieldTextBox
-        resource_action:
-          action: 
-          resource_type: DialogField
-          ae_namespace: 
-          ae_class: 
-          ae_instance: 
-          ae_message: 
-          ae_attributes: {}
-    - description: 
-      display: edit
       label: Variables
       display_method: 
       display_method_options: 
-      position: 1
+      position: 0
       dialog_fields:
       - name: param_network_name
         description: network_name
@@ -151,7 +67,7 @@
         required: true
         required_method: 
         required_method_options: {}
-        default_value: 
+        default_value: ''
         values: 
         values_method: 
         values_method_options: {}
@@ -189,7 +105,7 @@
         required: true
         required_method: 
         required_method_options: {}
-        default_value: 
+        default_value: ''
         values: 
         values_method: 
         values_method_options: {}
