Need to specify network,
~~~
23-ad967d46-983a-11e7-a937-525400d80b05.out:fatal: [localhost]: FAILED! => {"changed": false, "extra_data": null, "failed": true, "msg": "Error in creating instance (Inner Exception: Multiple possible networks found, use a Network ID to be more specific. (HTTP 409) (Request-ID: req-1b7c83ed-ebcb-4437-a82e-2f5a472fae97))"}
26-d0d9f2ca-987f-11e7-bf6d-525400d80b05.out:fatal: [localhost]: FAILED! => {"changed": false, "extra_data": null, "failed": true, "msg": "Error in creating instance (Inner Exception: Multiple possible networks found, use a Network ID to be more specific. (HTTP 409) (Request-ID: req-187e2700-29e5-48ec-b559-cc6086443d52))"}
~~~

--- a/playbooks/os_instance.yml
+++ b/playbooks/os_instance.yml
@@ -36,3 +36,4 @@
         name: "{{ instance_name }}"
         image: cirros
         flavor: m1.tiny
+        network: d7d71373-cebe-4649-8ab3-1e4d17f71f3b
