--- a/playbooks/os_instance.yml
+++ b/playbooks/os_instance.yml
@@ -10,7 +10,7 @@
 
   tasks:
     - debug: var=instance_name
-    - debug: var=instance_flavour
+    # - debug: var=instance_flavour
     - debug: var=network_name
     - debug: var=os_ssl
 
@@ -37,5 +37,6 @@
         state: present
         name: "{{ instance_name }}"
         image: cirros
-        flavor: "{{ instance_flavour }}"
+        # flavor: "{{ instance_flavour }}"
+        flavor: tiny
         network: "{{ network_name }}"
